# SensorLib

./: .gitignore  README.md  build.sh  pyproject.toml  pysensorlib.sip
lib/: CMakeLists.txt  Makefile  State.h  StateMessage.h  StateReporter.cpp  StateReporter.h  StateReporterC.cpp  StateReporterC.h  TelemertyMessage.h
tests/: conftest.py  sensor_data.py  test_ex1.py
